* #311: imProfile: added some field descriptions for pictures and videos | ticket from addons (Phoenyx)
* #312: imProfile: tribeusers can now be added and deleted in the control panel | ticket from addons (Phoenyx)
* #316: imProfile: updated the sort order for the functions in the module admin menu | ticket from addons (Phoenyx)

===2009-06-20 : 1.2 Alpha 2.1 ===
'''Fixed'''
* #619: Parse error in /trust_path/modules/oninstall.php. (UnderDog)
* #626: trying to edit the "waiting contents" block results in: Fatal error: Call to undefined function b_system_waiting_edit(). (UnderDog)

===2009-06-05 : 1.2 Alpha 2 === 

'''Added'''
* #580: Adding protector as a part of core modules. (stranger)
* #253: The admin area should have an option to define what mime types the site on a whole or specific modules can use. (stranger)
* #598 New block to display user's bookmarks (skenow)
* Implementing Adsense manager into system admin. (stranger)
* Implementing Rating manager into system admin. (stranger)
* #580: Added protector module to installer with automatic replacement of it to modules path. (stranger)

'''Improved'''
* The module installer in installer. (stranger)
* Improved social bookmarks block. (stranger)
* Updated TCPDF to version 4.6.015. (stranger)
* Updated TinyMCE to Version 3.2.4.1. (stranger)
* Updated FCKEditor to Version 2.6.4. (stranger)
* Updated GESHI to Version 1.0.8.4. (stranger)
* Updated SimplePie to Version 1.1.3. (stranger)
* Updated JalaliJSCalendar to Version 1.4. (stranger)
* Groups forms can now use anonymous as well. (stranger)
* Global Captcha Instance. (stranger)
* Log renderer to show amount of included files and used memory. (stranger)
* Ranks manager runs based on IPF. (stranger)

'''Fixed'''
* #554: Enhancements to the IcmsForms class. (Nekro)
* #556: failed to open stream to file include/jalali.php: No such file or directory. (stranger)
* #557: Trying to get property of a non-object in icmspersistablecontroller.php on line 162. (stranger)