@@ -104,6 +104,7 @@ Revision:
 * #311: imProfile: added some field descriptions for pictures and videos | ticket from addons (Phoenyx)
 * #312: imProfile: tribeusers can now be added and deleted in the control panel | ticket from addons (Phoenyx)
 * #316: imProfile: updated the sort order for the functions in the module admin menu | ticket from addons (Phoenyx)
+* #315: imProfile: when deleting a tribe, all tribeusers for this tribe are also deleted | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
